优化getData方式,减少数据库读取次数